fix: global integrations object is not used for preloaded events

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -97,6 +97,10 @@
               destSDKBaseURL:
             '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
               pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
+              // integrations: {
+              //   All: false
+              // },
+              // useGlobalIntegrationsConfigInEvents: true,
               // useServerSideCookies:true,
               // queueOptions: {
               //   batch: {
