chore: addressed review comments

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -160,8 +160,11 @@
               //   'StorageMigrator',
               //   'XhrQueue'
               // ]
-              // trackPageLifecycle:{
+              // autoTrack:{
               //   enabled: true,
+              //   pageLifecycle:{
+              //     enabled:true
+              //   }
               // }
             };
 
