feat: track time spent on a page (#1876)
* feat: track time spent on a page

* chore: moved the comment to appt place

* refactor: trackPageLifecycleEvents fn

* chore: review comment addressed

* chore: review comment addressed

* chore: review comment addressed

* refactor: trackPageLifecycleEvents fn will be called from load api

* chore: addressed review comment

* feat: modified load options structure

* chore: trackPageLifecycleEvents fn has been refactored and unit tests added

* chore: size limit updated

* chore: typo corrected

* chore: unit tests

* chore: size limit update

* chore: addressed review comments

* chore: eslint issue fixed

* fix: execution of cb when multiplt event listeners are attached

* chore: inline doc updated

* chore: readme updated

* chore: unit test added

* chore: unit test updated

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -154,12 +154,18 @@
               //   events: {
               //     delivery: 'buffer'
               //   }
-              }
+              },
               // plugins: [
               //   'StorageEncryption',
               //   'StorageMigrator',
               //   'XhrQueue'
               // ]
+              // autoTrack:{
+              //   enabled: true,
+              //   pageLifecycle:{
+              //     enabled:true
+              //   }
+              // }
             };
 
             rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
