chore: fix issues to load on legacy browsers

--- a/packages/sanity-suite/public/v3/manualLoadCall/index-local.html
+++ b/packages/sanity-suite/public/v3/manualLoadCall/index-local.html
@@ -179,7 +179,7 @@
           window.manualLoad(
             $('#writeKey').val(),
             $('#dataplaneURL').val(),
-            JSON.parse($('#loadOptions').val() ? $('#loadOptions').val() : {}),
+            JSON.parse($('#loadOptions').val() ? $('#loadOptions').val() : {})
           );
         });
       });
