--- a/packages/analytics-v1.1/public/index.html
+++ b/packages/analytics-v1.1/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="https://www.rudderstack.com/favicon.ico" type="image/x-icon" sizes="48x48">
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
