--- a/packages/sanity-suite/public/v3/manualLoadCall/index-npm.html
+++ b/packages/sanity-suite/public/v3/manualLoadCall/index-npm.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" href="https://www.rudderstack.com/favicon.ico" type="image/x-icon" sizes="48x48" />
+    <link
+      rel="icon"
+      href="https://www.rudderstack.com/favicon.ico"
+      type="image/x-icon"
+      sizes="48x48" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RudderStack JS SDK Sanity Suite</title>
@@ -25,6 +29,7 @@
     </script>
 
     <script>
+      // prettier-ignore
       (function() {
         "use strict";
         window.RudderSnippetVersion = "3.0.58";
@@ -111,13 +116,14 @@
       }
     </style>
     <script>
+      // prettier-ignore
       $(document).ready(function () {
         $('#manualLoadForm').submit(function (event) {
           event.preventDefault();
           window.manualLoad(
             $('#writeKey').val(),
             $('#dataplaneURL').val(),
-            JSON.parse($('#loadOptions').val() ? $('#loadOptions').val() : {}),
+            JSON.parse($('#loadOptions').val() ? $('#loadOptions').val() : {})
           );
         });
       });
