fix: retry status code logic and error messages

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -98,9 +98,9 @@
             }
             var loadOptions = {
               logLevel: 'DEBUG',
-              // integrations: {
-              //   All: false
-              // },
+              integrations: {
+                All: false
+              },
               // useGlobalIntegrationsConfigInEvents: true,
               // useServerSideCookies:true,
               // queueOptions: {
