--- a/examples/reactjs/vite/sample-app/index.html
+++ b/examples/reactjs/vite/sample-app/index.html
@@ -8,7 +8,7 @@
     <script>
       (function() {
         "use strict";
-        window.RudderSnippetVersion = "3.0.58";
+        window.RudderSnippetVersion = "3.0.60";
         var identifier = "rudderanalytics";
         if (!window[identifier]) {
           window[identifier] = [];
@@ -19,7 +19,11 @@
             console.error("RudderStack JavaScript SDK snippet included more than once.");
           } else {
             rudderanalytics.snippetExecuted = true;
-
+            window.rudderAnalyticsBuildType = "legacy";
+            var sdkBaseUrl = "https://cdn.rudderlabs.com";
+            var sdkVersion = "v3";
+            var sdkFileName = "rsa.min.js";
+            var scriptLoadingMode = "async";
             var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
             for (var i = 0; i < methods.length; i++) {
               var method = methods[i];
@@ -29,7 +33,7 @@
                     rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
                   } else {
                     var _methodName;
-                    (_methodName = window[identifier][methodName]) === null || _methodName === void 0 || _methodName.apply(window[identifier], arguments);
+                    (_methodName = window[identifier][methodName]) === null || _methodName === undefined || _methodName.apply(window[identifier], arguments);
                   }
                 };
               }(method);
