--- a/packages/sanity-suite/public/v3/manualLoadCall/index-cdn.html
+++ b/packages/sanity-suite/public/v3/manualLoadCall/index-cdn.html
@@ -119,8 +119,8 @@
               logLevel: 'DEBUG',
               configUrl: '__CONFIG_SERVER_HOST__',
               destSDKBaseURL:
-                sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-              pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
+                sdkBaseUrl + '/' + sdkVersion + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
+              pluginsSDKBaseURL: sdkBaseUrl + '/' + sdkVersion + '/' + window.rudderAnalyticsBuildType + '/plugins',
               consentManagement: {
                 enabled: true,
                 provider: 'oneTrust',
