chore: upgrade sample apps

--- a/examples/angular/sample-app/src/index.html
+++ b/examples/angular/sample-app/src/index.html
@@ -45,6 +45,7 @@
     // Below line is only for demonstration purpose, SPA code is better place for auto page call
     window.rudderanalytics.page('sample page call');
   </script>
+  <script src="env-config.js"></script>
 </head>
 <body>
   <app-root></app-root>
