chore: update sample app

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -97,6 +97,11 @@
             }
             var loadOptions = {
               logLevel: 'DEBUG',
+              // sourceConfigurationOverride: {
+              //   destinations: [
+              //     { id: 'xyz', enabled: false },
+              //   ],
+              // },
               // integrations: {
               //   All: false
               // },
