chore: setup dev environment

--- a/packages/sanity-suite/public/all/index.html
+++ b/packages/sanity-suite/public/all/index.html
@@ -386,7 +386,7 @@
             </div>
             <iframe 
                 id="iframe-v3-cdn" 
-                src="https://cdn.rudderlabs.com/sanity-suite__ENV_PATH__/v3/cdn/index.html"
+                src="__BASE_CDN_URL__/sanity-suite__ENV_PATH__/v3/cdn/index.html"
                 onload="markLoaded(0)"
                 onerror="markError(0)"
             ></iframe>
@@ -402,7 +402,7 @@
             </div>
             <iframe 
                 id="iframe-v3-npm" 
-                src="https://cdn.rudderlabs.com/sanity-suite__ENV_PATH__/v3/npm/index.html"
+                src="__BASE_CDN_URL__/sanity-suite__ENV_PATH__/v3/npm/index.html"
                 onload="markLoaded(1)"
                 onerror="markError(1)"
             ></iframe>
@@ -418,7 +418,7 @@
             </div>
             <iframe 
                 id="iframe-v1.1-cdn" 
-                src="https://cdn.rudderlabs.com/sanity-suite__ENV_PATH__/v1.1/cdn/index.html"
+                src="__BASE_CDN_URL__/sanity-suite__ENV_PATH__/v1.1/cdn/index.html"
                 onload="markLoaded(2)"
                 onerror="markError(2)"
             ></iframe>
@@ -434,7 +434,7 @@
             </div>
             <iframe 
                 id="iframe-v1.1-npm" 
-                src="https://cdn.rudderlabs.com/sanity-suite__ENV_PATH__/v1.1/npm/index.html"
+                src="__BASE_CDN_URL__/sanity-suite__ENV_PATH__/v1.1/npm/index.html"
                 onload="markLoaded(3)"
                 onerror="markError(3)"
             ></iframe>
