--- a/packages/sanity-suite/public/v1.1/index-cdn.html
+++ b/packages/sanity-suite/public/v1.1/index-cdn.html
@@ -122,7 +122,7 @@
     </style>
     <script
       async
-      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__/rudder-analytics.min.js"></script>
+      src="__BASE_CDN_URL__/__CDN_VERSION_PATH__/rudder-analytics.min.js"></script>
   </head>
   <body>
     <div class="container-xxl">
