--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -44,7 +44,7 @@
           } else {
             rudderanalytics.snippetExecuted = true;
             window.rudderAnalyticsBuildType = "legacy";
-            var sdkBaseUrl = "https://cdn.rudderlabs.com";
+            var sdkBaseUrl = "__BASE_CDN_URL__";
             var sdkVersion = "__CDN_VERSION_PATH__";
             var sdkFileName = "rsa.min.js";
             var scriptLoadingMode = "async";
@@ -193,7 +193,7 @@
 
     <!--    <script-->
     <!--      async-->
-    <!--      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rsa.min.js"></script>-->
+    <!--      src="https://__BASE_CDN_URL__/__CDN_VERSION_PATH__rsa.min.js"></script>-->
   </head>
   <body>
     <div class="container-xxl">
