--- a/packages/sanity-suite/public/v1.1/manualLoadCall/index-cdn.html
+++ b/packages/sanity-suite/public/v1.1/manualLoadCall/index-cdn.html
@@ -108,7 +108,7 @@
     </style>
     <script
       async
-      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__/rudder-analytics.min.js"></script>
+      src="__BASE_CDN_URL__/__CDN_VERSION_PATH__/rudder-analytics.min.js"></script>
     <script>
       // prettier-ignore
       $(document).ready(function () {
