--- a/packages/sanity-suite/public/v3/manualLoadCall/index-local.html
+++ b/packages/sanity-suite/public/v3/manualLoadCall/index-local.html
@@ -44,7 +44,7 @@
           } else {
             rudderanalytics.snippetExecuted = true;
             window.rudderAnalyticsBuildType = "legacy";
-            var sdkBaseUrl = "https://cdn.rudderlabs.com";
+            var sdkBaseUrl = "__BASE_CDN_URL__";
             var sdkVersion = "__CDN_VERSION_PATH__";
             var sdkFileName = "rsa.min.js";
             var scriptLoadingMode = "async";
