chore: fix html

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -186,7 +186,7 @@
               loadOptions.configUrl = envConfigUrl;
             }
 
-            rudderanalytics.addCustomIntegration('Custom Integration 1', {
+            rudderanalytics.addCustomIntegration('test-dest-id-1', {
               init: (analytics, logger) => {
                 logger.debug('"init" called');
                 
