feat: add custom device mode integrations support (#2309)
* feat: custom integration interface and types (#2295)

* feat(analytics-js-common): customintegration interface and types

* chore: addressed review comments

* chore: removed unused import

* chore: updated customintegration type

* feat: add custom integrations api (#2299)

* feat: add custom integrations api

* feat: expose the api and improve code coverage

* chore: update size limit config

* refactor: log messages and property names

* refactor: fix cyclic type dependency

* refactor: rename function

* feat: additional improvements

* test: add test case to cover custom integrations case

---------

Co-authored-by: AI Assistant <ai@rudderstack.com>

* fix: validate integration (#2310)

Co-authored-by: AI Assistant <ai@rudderstack.com>

* chore: fix size limit configurations

* fix: integration name validation (#2311)

Co-authored-by: AI Assistant <ai@rudderstack.com>

* chore: improve slack messaging

* chore: update new loading snippet in all the apps

* feat: support custom device mode destination (#2350)

* feat: support custom device mode destination

* chore: fix html

---------

Co-authored-by: AI Assistant <ai@rudderstack.com>

* feat: update custom integrations init api (#2374)

* chore: update snippet version to latest

* fix(plugins): allow disabled custom device mode in configured destinations (#2378)

* fix: allow disabled custom device mode in configured destinations

* chore: update code comment

* chore: address review comment

* chore: size limit update

* fix: update app state excludes list

* fix: custom integrations validations (#2417)

* fix: custom integrations validations

* chore: address ai bot review comments

* chore: fix placeholder issues

* chore: add explicit boolean check

* chore: revert integration examples changes to avoid dependency

* fix: correctly export destination config type (#2419)

---------

Co-authored-by: Moumita <36885121+MoumitaM@users.noreply.github.com

--- a/examples/angular/sample-app/src/index.html
+++ b/examples/angular/sample-app/src/index.html
@@ -9,7 +9,7 @@
   <script>
     (function() {
       "use strict";
-      window.RudderSnippetVersion = "3.0.60";
+      window.RudderSnippetVersion = "3.2.0";
       var identifier = "rudderanalytics";
       if (!window[identifier]) {
         window[identifier] = [];
@@ -25,7 +25,7 @@
           var sdkVersion = "v3";
           var sdkFileName = "rsa.min.js";
           var scriptLoadingMode = "async";
-          var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
+          var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent", "addCustomIntegration" ];
           for (var i = 0; i < methods.length; i++) {
             var method = methods[i];
             rudderanalytics[method] = function(methodName) {
